--- a/templates/base.html
+++ b/templates/base.html
@@ -322,7 +322,7 @@
                         </p>
                         <p>
                             Fastest win: <b>{{ swStatsDict['fastest_win'] }}</b> <br>
-                            Highest-kill game: <b>{{ swStatsDict['most_kills_game'] }} kills</b><br>
+                            Highest-kill game?: <b>{{ swStatsDict['most_kills_game'] }} kills</b><br>
                             Farthest bow kill: <b>{{swStatsDict['longest_bow_kill']}} blocks</b> (<b>{{(swStatsDict['longest_bow_kill'] * 3.2808)| int}}</b> ft.)<br>
                         </p>
                         <p>
